-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0
-
None
-
-
67fe9e4106616383ede02741cfceaec12ee1b648 (qt/qtmultimedia/dev) a6a56ee54c85835bc274472bc7063b541c8223ab (qt/qtmultimedia/6.2)
Reported on qt-interest and reproduced:
Build the example, don't run it from Terminal, but start the camera.app bundle by double clicking on it in Finder. This doesn't ask for permission, but crashes instead unceremoniously.
Starting from Terminal doesn’t crash (no matter whether with ‘open’ or the binary inside the bundle directly), only starting camera.app via Finder does. Starting the camera binary inside the camera.app bundle via Finder does not crash, it asks for permission and if rejected nothing special happens (no video, obviously, also no crash).
The multimedia/declarative-camera example however does start correctly in all cases. It doesn’t ask for microphone access, which the multimediawidgets/camera example does when launched from Terminal.
The stack trace I get with the widgets example goes to
12 com.apple.avfoundation 0x00007fff30bbe7a5 -[AVCaptureSession addInput:] + 71
13 org.qt-project.QtMultimedia 0x000000010ec99f00 AVFCameraSession::attachAudioInputDevice() + 176
14 org.qt-project.QtMultimedia 0x000000010ec9a190 AVFCameraSession::updateAudioInput() + 128 (avfcamerasession.mm:487)
15 org.qt-project.QtMultimedia 0x000000010ec97dd0 AVFCameraService::setAudioInput(QPlatformAudioInput*) + 624 (avfcameraservice.mm:146)
16 org.qt-project.QtMultimedia 0x000000010ec65c98 QMediaCaptureSession::setAudioInput(QAudioInput*) + 56 (qmediacapturesession.cpp:204)
before disappearing into com.apple.Foundation. Perhaps that helps us figure out what’s going on.
- relates to
-
QTBUG-98419 [macOS] Audio Recorder example crashes on start on macOS 10.15 (Catalina)
-
- Closed
-
- resulted from
-
QTBUG-97407 OSX no cam/mic access dialogue
-
- Closed
-
| For Gerrit Dashboard: QTBUG-97408 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 377882,5 | macOS/iOS: Query for camera and microphone authorization status | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 377987,2 | macOS/iOS: Query for camera and microphone authorization status | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 378773,5 | Camera example: Fix .plist file to build in iOS/macOS with qmake and cmake | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 378841,2 | Camera example: Fix .plist file to build in iOS/macOS with qmake and cmake | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |